--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ body {
     color: #000000;
 }
 
+.partners-list {
+  list-style: none;
+}
+
 .map {
     background-image: url("#");
     background-position: 0 0;
@@ -184,3 +188,10 @@ textarea {
     list-style: none;
 }
 
+.portfolio-pagination {
+  list-style: none;
+}
+
+.portfolio-pagination a {
+  text-decoration: none;
+}
